SERVER-37200 Communicate optimized $listSessions correctly from mongos to mongod